Updated Rock RMS Loading Icon styling to fix off-centered content.

--- a/css/blue-ridge.css
+++ b/css/blue-ridge.css
@@ -277,9 +277,6 @@ span.text-white a {
     height: 40px;
     position: relative;
     top: 50%;
-    left: 50%;
-    margin-left: -20px;
-    margin-top: -20px
 }
 
 .double-bounce1,
